# Osoyoos-Launcher-scenery-fix

./: .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Lightmapper_Scenery_Object_Bake_Fix.md  Osoyoos.slnx  PLUCKER_PRECISION_BUG_FIX.md  README.md  ToolkitLauncher.slnx  global.json  publish_release.bat
Documentation/: Lightmap_Scenery_Bake_Fix.md  Lightmap_Scenery_Fix_Investigation.md
GetProcAddrHelper/: CMakeLists.txt  GetProcAddrHelper.vcxproj
GetProcAddrHelper/GetProcA.8bab0404/Release/: GetProcAddrHelper.exe.recipe  GetProcAddrHelper.iobj  GetProcAddrHelper.ipdb
GetProcAddrHelper/GetProcA.8bab0404/Release/GetProcA.8bab0404.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GetProcAddrHelper.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
GetProcAddrHelper/src/: GetProcAddrHelper.cpp
H2ToolHooks/: CMakeLists.txt  H2ToolHooks.cpp  H2ToolHooks.h  H2ToolHooks.vcxproj  LightmapPrecisionFix.cpp  LightmapSceneryFix.cpp  PatternScanner.h  dllmain.cpp
H2ToolHooks/H2ToolHooks/Release/: H2ToolHooks.dll.recipe
H2ToolHooks/H2ToolHooks/Release/H2ToolHooks.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  H2ToolHooks.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
H2ToolHooks/cave/: .gitignore  build_cave.bat  extract_cave.py  objfix_cave.cpp
H2ToolHooks/src/: H2ToolHooks.cpp  H2ToolHooks.h  KeyValueConfig.h  LightmapSceneryFix.cpp  PatternScanner.h  dllmain.cpp  patches.h  platform.h
Launcher/: PathSettings.xaml  PathSettings.xaml.cs  ToolkitLauncher.csproj  ToolkitProfiles.cs
ManagedBlamHelper/: BitmapSettings.cs  MBHandler.cs  ManagedBlamHelper.csproj  ManagedBlamInterface.cs  Utility.cs
OsoyoosLauncher/: .gitignore  AnimLengthPrompt.xaml  AnimLengthPrompt.xaml.cs  App.xaml  App.xaml.cs  BuiltinProfiles.cs  CancelableProgressBarWindow.xaml  CancelableProgressBarWindow.xaml.cs  Credits.xaml  Credits.xaml.cs  Documentation.cs  FilePicker.cs  GeoClassPrompt.xaml  GeoClassPrompt.xaml.cs  HashHelpers.cs  ICancellableProgress.cs  LightmapConfigSettings.cs  MainWindow.xaml  MainWindow.xaml.cs  OsoyoosLauncher.csproj  PathSettings.xaml  PathSettings.xaml.cs  Program.cs  ToolkitProfiles.cs  UIHelpers.cs  UIThemeSupport.cs
Tools/: generate_scenery_bounds_db.py  h2v_scenery_bounds.db  (+1 more)
(+37 files in other folders)
